# PC6502Emulator

./: .gitignore
.beads/: identity.toml
.codex/: hooks.json
.gc/: settings.json
DOS65_OS/dos65_os/: Makefile  dos65_b800.lst  dos65_d000.lst  dos65_pc6502.lst  dosdefn.asm  pem215.asm  simrbc.asm
DOS65_OS/dos65_utilities/: Makefile  asm.lst  asm211.asm  assign.c  assign.s  bcomp816.lst  bcompile.lst  compl203.asm  format.lst  mkcom.lst  nvset.c  (+13 more)
PC6502_firmware_source/: 6502PCbios.asm  6502PCbios.lst  6502PCbiosesp.lst  6502PCbiosvideo.lst  Makefile  bios_ch375.asm  bios_defines.asm  bios_esp.asm  bios_ide.asm  bios_multi.asm  bios_pager.asm  bios_rtc.asm  bios_serial.asm  bios_video.asm  dos65drv.asm  dos65drv.lst  loader.asm  loader.lst  macro.asm  rom.hex  testmulti.asm  testmulti.lst
documentation/: DOS65_Description.md  PC6502_system_documentation.md
emulator/: .gitignore  Cargo.toml  QUICKSTART.md
emulator/config/: default.toml
emulator/disk_image/: pcdos65.s19
emulator/examples/: boot_diag.rs
emulator/scripts/: ensure-local-cargo-target.sh
emulator/src/: acia.rs  bus.rs  config.rs  disk.rs  emulator.rs  lib.rs  main.rs  mmu.rs  peripherals.rs  rom.rs  rtc.rs  xt_ide.rs
emulator/src/cpu/: flags.rs  mod.rs  opcodes.rs
emulator/tests/: config_load.rs  m1_serial_gate.rs  m2_mmu_gate.rs  m3_xt_ide_gate.rs  m4_dos_boot_gate.rs  m5_disk_io_gate.rs  m6_rtc_config_gate.rs
specifications/: dos65-expectations.md  hardware-spec.md  memory-mapped-video-investigation.md  memory-mmu.md  multio-card-investigation.md  rom-reset.md  system-reference.md
(+171 files in other folders)
