[workspace]

[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "emulator"
path = "src/lib.rs"

[[bin]]
name = "emulator"
path = "src/main.rs"

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false }
